<resources>
    <string name="app_name">Task Manager</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="Principal">Principal</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="name" translatable="false">Name</string>
    <string name="number" translatable="false">Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="erro_inesperado">Algo de errado aconteceu. TENTE NOVAMENTE!</string>
    <string name="email_cadastrado">Email já cadastrado!</string>
    <string name="informar_campos">Informe todos os campos!</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="login_e_senha_incorreto">Usuário e/ou senha incorreto!</string>
    <string name="password_hint" translatable="false">************</string>
    <string name="lembrar_senha">Lembre minha senha</string>
    <string name="fazer_login">Fazer login</string>
    <string name="criar_conta">Criar conta</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="numero_telefone">Número do telefone</string>
    <string name="digite_telefone">Digite seu número</string>
    <string name="campos_preenchidos">Todos os campos devem ser preenchidos</string>
    <string name="disciplina_cadastrada">Disciplina já cadastrada</string>
    <string name="dados_incorretos"> Nome da disciplina e/ou descrição incorretos!</string>
    <string name="data_vencimento">Data de Vencimento</string>
    <string name="tarefa_cadastrada">Impossivel cadastrar uma tarefa com o mesmo nome</string>
    <string name="cadastro_tarefas"> "Cadastro de Tarefas"</string>
    <string name="lista_tarefas">"Lista de Tarefas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="feita">Feita</string>
    <string name="menu_done">Tarefas Concluídas</string>
    <string name="menu_todo">Tarefas à fazer</string>
    <string name="menu_logout">Sair</string>
    <string name="description" translatable="false">Description</string>
    <string name="cadastrar_tarefa">Cadastrar Tarefa</string>
    <string name="cadastrar_disciplina">Cadastrar Disciplina</string>
    <string name="selecione_uma_disciplina">Selecione uma Disciplina:</string>
    <string name="dialog_delete">Você tem certeza que deseja excluir essa tarefa?</string>
    <string name="dialog_delete_subject">Você tem certeza que deseja excluir essa disciplina?</string>
    <string name="no_cancele">Não, cancele!</string>
    <string name="yes_delete">Sim, delete!</string>
    <string name="tarefa_delete">Tarefa deletada!</string>
    <string name="disciplina_delete">Disciplina deletada</string>
    <string name="nome_disciplina">Nome da Disciplina</string>
    <string name="descricao_disciplina">Descrição da Disciplina</string>
    <string name="nome_tarefa">Nome da Tarefa</string>
    <string name="descricao_tarefa">Descrição da Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="data_de_vencimento">Data de Vencimento</string>
    <string name="descricao_da_tarefa">Descrição da tarefa</string>
    <string name="concluida">Concluída</string>
    <string name="nome_da_tarefa">Nome da tarefa</string>
    <string name="edicao_de_tarefa">Edição de Tarefa</string>
    <string name="edicao_disciplina">Edição de Disciplina</string>
    <string name="todas_as_tarefas_relacionadas_tambem_serao_excluidas">Todas as tarefas relacionadas também serão excluídas!</string>
    <string name="mensagem_cadastro_disciplina">É necessário ter pelo menos uma disciplina cadastrada</string>
</resources>
