<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Principal" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/cadastrar_disciplina" />
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/menu_done" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_assignment_late_black_24dp"
            android:title="@string/menu_todo" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />

    </group>



</menu>
